backend: list of relations

--- a/station/index.html
+++ b/station/index.html
@@ -44,7 +44,7 @@
 					<ul class="dropdown-menu" role="menu">
 						<li ui-sref-active="active"><a href ui-sref="persons">Personen</a></li>
 						<li ui-sref-active="active"><a href ui-sref="organisations">Organisationen</a></li>
-						<!--<li ui-sref-active="active"><a href ui-sref="relations">Verbindungen</a></li>-->
+						<li ui-sref-active="active"><a href ui-sref="relations">Verbindungen</a></li>
 					</ul>
 				</li>
 
@@ -463,7 +463,7 @@
 					<th>Name</th>
 					<th>Art</th>
 					<th>Schlagworte</th>
-					<th>Aktionen</th>
+					<th class="text-right">Aktionen</th>
 				</tr>
 			</head>
 			<tbody>
@@ -688,25 +688,14 @@
 <script type="text/ng-template" id="partials/relations.html">
 
 	<div class="row">
-		<div class="col-md-4 headline">
+		<div class="col-md-6 headline">
 			<h1>Verbindungen</h1>
 
 			<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
 		</div>
 
-		<div class="col-md-2">
-			<button class="btn btn-default" ui-sref="releation({id: 'new'})">Verbindung anlegen</button>
-		</div>
-
 		<div class="col-md-3">
-			<div class="btn-group">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-					Daten anzeigen <span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu" role="menu">
-					<li ng-repeat="o in fields" ng-class="{active:o.visible}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
-				</ul>
-			</div>
+			<!--<button class="btn btn-default" ui-sref="releation({id: 'new'})">Verbindung anlegen</button>-->
 		</div>
 
 		<div class="col-md-3">
@@ -721,21 +710,14 @@
 		<h1><i class="fa fa-spin fa-spinner"></i> Verbindungen-Liste wird geladen</h1>
 	</div>
 
-	<!--<div ng-show="!loading">-->
-
 	<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
 
 		<thead>
 		<tr>
-			<th
-					class="sortable" ng-class="{
-                    'sort-asc': tableParams.isSortBy('name', 'asc'),
-                    'sort-desc': tableParams.isSortBy('name', 'desc')
-                  }"
+			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('name', 'asc'), 'sort-desc': tableParams.isSortBy('name', 'desc')}"
 					ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">
 				Name
 			</th>
-
 			<th ng-repeat="f in q.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
@@ -744,24 +726,21 @@
 				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
 				{{f.name}}
 			</th>
-
 			<th class="text-right">Aktionen</th>
 		</tr>
 		</thead>
 
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td ng-bind="p.one"></td>
-			<td ng-bind="p.two"></td>
+			<td ng-bind="p.name"></td>
 			<td ng-repeat="f in q.fields" ng-bind="getDispayValues(f,p)"></td>
 			<td class="col-action">
 				<span class="btn-right" ng-click="remove(p)" title="Verbindung löschen"><i class="fa fa-trash"></i></span>
-				<span class="btn-right" ui-sref='relation({id: p._id})' title="Verbindung bearbeiten"><i class="fa fa-edit"></i></span>
+				<!--<span class="btn-right" ui-sref='relation({id: p._id})' title="Verbindung bearbeiten"><i class="fa fa-edit"></i></span>-->
 			</td>
 		</tr>
 		</tbody>
 	</table>
-	<!--</div>-->
 
 </script>
 
