--- a/station/index.html
+++ b/station/index.html
@@ -380,8 +380,9 @@
 				<td ng-bind="o.tags"></td>
 				<!--<td ng-bind="o.entities"></td>-->
 				<!--<td ng-bind="o.data"></td>-->
-				<td>
+				<td class="col-action">
 					<span class="btn-right" ng-click="remove(o)" title="Verbindung löschen"><i class="fa fa-trash"></i></span>
+					<span class="btn-right" ng-click="edit(o)" title="Verbindung bearbeiten"><i class="fa fa-edit"></i></span>
 				</td>
 			</tr>
 			</tbody>
@@ -729,56 +730,82 @@
 
 </script>
 
+<script type="text/ng-template" id="partials/relation-modal.html">
+
+	<div ng-controller="RelationModalEditCtrl">
+		<div class="modal-header">
+			<button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
+			<h4 class="modal-title">
+				Verbindung <span ng-if="isNew">anlegen</span><span ng-if="!isNew">bearbeiten</span>
+			</h4>
+		</div>
+		<div class="modal-body">
+			<div ng-include="'partials/relation-edits.html'"></div>
+		</div>
+		<div class="modal-footer">
+			<button class="btn btn-primary" ng-click="store()" translate>Speichern</button>
+			<button class="btn btn-warning" ng-click="cancel()" translate>Abbruch</button>
+		</div>
+	</div>
+
+</script>
+
+<script type="text/ng-template" id="partials/relation-edits.html">
+
+	<form class="form">
+		<div class="form-group">
+			<label>Bezug 1</label>
+
+			<div class="has-feedback">
+				<input type="text" class="form-control" placeholder="Bezug 1" ng-model="edit.one.name" options="typeaheadOptionsEntities" datasets="datasetEntitiesOne" ngtypeahead>
+				<span ng-show="edit.one._id" class="glyphicon glyphicon-ok form-control-feedback"></span>
+			</div>
+		</div>
+		<div class="form-group">
+			<label>Bezug 2</label>
+
+			<div class="has-feedback">
+				<input type="text" class="form-control" placeholder="Bezug 2" ng-model="edit.two.name" options="typeaheadOptionsEntities" datasets="datasetEntitiesTwo" ngtypeahead>
+				<span ng-show="edit.two._id" class="glyphicon glyphicon-ok form-control-feedback"></span>
+			</div>
+		</div>
+		<div class="form-group">
+			<label>Typ</label>
+			<input type="text" class="form-control" placeholder="Typ" ng-model="relation.type">
+		</div>
+		<div class="form-group">
+			<label>Schlagworte</label>
+
+			<div class="has-feedback">
+				<input type="text" class="form-control" placeholder="Schlagworte" ng-model="edit.tags" options="typeaheadOptionsTags" datasets="datasetTags" ngtypeahead>
+				<span ng-show="canAddEntry('tags', edit.tags)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('tags', edit.tags)"></span>
+			</div>
+			<div class="label-list">
+				<div ng-repeat="o in relation.tags" class="label label-default"><span ng-bind="o"></span><i class="glyphicon glyphicon-remove btn-label-right" title="Tag entfernen" ng-click="removeEntry('tags', o)"></i></div>
+			</div>
+		</div>
+		<div ngdatafields data-fields="relation.data"></div>
+	</form>
+
+	<!--<div class="btn-group">-->
+	<!--<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">-->
+	<!--Datenfeld hinzufügen <span class="caret"></span>-->
+	<!--</button>-->
+
+	<!--<ul class="dropdown-menu up" role="menu">-->
+	<!--<li ng-repeat="o in fields"><a href ng-click="addData(o)" ng-bind="o.name"></a></li>-->
+	<!--</ul>-->
+	<!--</div>-->
+
+</script>
+
 <script type="text/ng-template" id="partials/relation.html">
 
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<h1>Verbindung <span ng-if="isNew">anlegen</span><span ng-if="!isNew">bearbeiten</span></h1>
 
-			<form class="form">
-				<div class="form-group">
-					<label>Bezug 1</label>
-
-					<div class="has-feedback">
-						<input type="text" class="form-control" placeholder="Bezug 1" ng-model="edit.one.name" options="typeaheadOptionsEntities" datasets="datasetEntitiesOne" ngtypeahead>
-						<span ng-show="edit.one._id" class="glyphicon glyphicon-ok form-control-feedback"></span>
-					</div>
-				</div>
-				<div class="form-group">
-					<label>Bezug 2</label>
-
-					<div class="has-feedback">
-						<input type="text" class="form-control" placeholder="Bezug 2" ng-model="edit.two.name" options="typeaheadOptionsEntities" datasets="datasetEntitiesTwo" ngtypeahead>
-						<span ng-show="edit.two._id" class="glyphicon glyphicon-ok form-control-feedback"></span>
-					</div>
-				</div>
-				<div class="form-group">
-					<label>Typ</label>
-					<input type="text" class="form-control" placeholder="Typ" ng-model="relation.type">
-				</div>
-				<div class="form-group">
-					<label>Schlagworte</label>
-
-					<div class="has-feedback">
-						<input type="text" class="form-control" placeholder="Schlagworte" ng-model="edit.tags" options="typeaheadOptionsTags" datasets="datasetTags" ngtypeahead>
-						<span ng-show="canAddEntry('tags', edit.tags)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('tags', edit.tags)"></span>
-					</div>
-					<div class="label-list">
-						<div ng-repeat="o in relation.tags" class="label label-default"><span ng-bind="o"></span><i class="glyphicon glyphicon-remove btn-label-right" title="Tag entfernen" ng-click="removeEntry('tags', o)"></i></div>
-					</div>
-				</div>
-				<div ngdatafields data-fields="relation.data"></div>
-			</form>
-
-			<!--<div class="btn-group">-->
-			<!--<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">-->
-			<!--Datenfeld hinzufügen <span class="caret"></span>-->
-			<!--</button>-->
-
-			<!--<ul class="dropdown-menu up" role="menu">-->
-			<!--<li ng-repeat="o in fields"><a href ng-click="addData(o)" ng-bind="o.name"></a></li>-->
-			<!--</ul>-->
-			<!--</div>-->
+			<div ng-include="'partials/relation-edits.html'"></div>
 
 			<div class="pull-right">
 				<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
