--- a/station/index.html
+++ b/station/index.html
@@ -66,27 +66,38 @@
 	<br/>
 </div>
 
-<script type="text/ng-template" id="partials/pager">
-	<ul class="pager ng-cloak">
-		<li ng-repeat="page in pages"
-			ng-class="{'disabled': !page.active, 'previous': page.type == 'prev', 'next': page.type == 'next'}"
-			ng-show="page.type == 'prev' || page.type == 'next'" ng-switch="page.type">
-			<a ng-switch-when="prev" ng-click="params.page(page.number)" href="">&laquo; Previous</a>
-
-			<a ng-switch-when="next" ng-click="params.page(page.number)" href="">Next &raquo;</a>
-		</li>
-		<div>
-			Seite <span ng-bind="params.page()"></span>
+<script type="text/ng-template" id="partials/pager-blank.html"></script>
+<script type="text/ng-template" id="partials/pager.html">
+	<div class="row" ng-controller="PagerCtrl">
+		<div class="col-md-3">
+			<div class="btn btn-default" ng-class="{disabled:params.page()==1}" ng-click="params.page(1)" href="">&laquo; Erste</div>
+			<div class="btn btn-default" ng-class="{disabled:params.page()==1}" ng-click="params.page(params.page()-1)" href="">&laquo; Letzte</div>
 		</div>
-		<li>
-			<div class="btn-group">
-				<button type="button" ng-class="{'active':params.count() == 10}" ng-click="params.count(10)" class="btn btn-default">10</button>
-				<button type="button" ng-class="{'active':params.count() == 25}" ng-click="params.count(25)" class="btn btn-default">25</button>
-				<button type="button" ng-class="{'active':params.count() == 50}" ng-click="params.count(50)" class="btn btn-default">50</button>
-				<button type="button" ng-class="{'active':params.count() == 100}" ng-click="params.count(100)" class="btn btn-default">100</button>
-			</div>
-		</li>
-	</ul>
+		<div class="col-md-6">
+			<table class="table">
+				<tr>
+					<td>Seite:</td>
+					<td>
+						<span ng-bind="params.page()"></span> von
+						<span ng-bind="pagecount()"></span>
+					</td>
+				</tr>
+				<tr>
+					<td>Anzahl pro Seite:</td>
+					<td><div class="btn-group small">
+						<button type="button" ng-class="{'active':params.count() == 10}" ng-click="params.count(10)" class="btn btn-default">10</button>
+						<button type="button" ng-class="{'active':params.count() == 25}" ng-click="params.count(25)" class="btn btn-default">25</button>
+						<button type="button" ng-class="{'active':params.count() == 50}" ng-click="params.count(50)" class="btn btn-default">50</button>
+						<button type="button" ng-class="{'active':params.count() == 100}" ng-click="params.count(100)" class="btn btn-default">100</button>
+					</div></td>
+				</tr>
+			</table>
+		</div>
+		<div class="col-md-3 text-right">
+			<div class="btn btn-default" ng-class="{disabled:(params.page()>=pagecount())}" ng-click="params.page(params.page()+1)">Nächste &raquo;</div>
+			<div class="btn btn-default" ng-class="{disabled:(params.page()>=pagecount())}" ng-click="params.page(pagecount())">Letzte &raquo;</div>
+		</div>
+	</div>
 </script>
 
 <script type="text/ng-template" id="partials/start.html">
@@ -149,9 +160,7 @@
 		<h1><i class="fa fa-spin fa-spinner"></i> Personen-Liste wird geladen</h1>
 	</div>
 
-	<!--<div ng-show="!loading">-->
-
-	<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
+	<table ng-table="tableParams" template-pagination="partials/pager.html" show-filter="false" class="table table-striped">
 
 		<thead>
 		<tr>
@@ -161,7 +170,8 @@
                     'sort-desc': tableParams.isSortBy('name', 'desc')
                   }"
 					ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">
-				Name
+				<span>Name</span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
 			</th>
 
 			<th ng-repeat="f in q.fields"
@@ -170,7 +180,8 @@
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
                   }"
 				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
-				{{f.name}}
+				<span ng-bind="f.name"></span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy(f.key, 'asc'),'fa-sort-desc':tableParams.isSortBy(f.key, 'desc')}" class="fa"></span>
 			</th>
 
 			<th class="text-right">Aktionen</th>
@@ -180,7 +191,10 @@
 		<tbody>
 		<tr ng-repeat="p in $data">
 			<td ng-bind="p.name"></td>
-			<td ng-repeat="f in q.fields" ng-bind="getDispayValues(f,p)"></td>
+			<td ng-repeat="f in q.fields">
+				<span ng-bind="getDispayValues(f,p)"></span>
+				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
+			</td>
 			<td class="col-action">
 				<span class="btn-right" ng-click="remove(p)" title="Person löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ng-click="relationsDialog(p)" title="Verbindungen bearbeiten"><i class="fa fa-link"></i></span>
@@ -189,7 +203,6 @@
 		</tr>
 		</tbody>
 	</table>
-	<!--</div>-->
 
 </script>
 
@@ -229,30 +242,25 @@
 		<h1><i class="fa fa-spin fa-spinner"></i> Organisationen-Liste wird geladen</h1>
 	</div>
 
-	<!--<div ng-show="!loading">-->
-
-	<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
+	<table ng-table="tableParams" template-pagination="partials/pager.html" show-filter="false" class="table table-striped">
 
 		<thead>
 		<tr>
-			<th
-					class="sortable" ng-class="{
+			<th class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy('name', 'asc'),
                     'sort-desc': tableParams.isSortBy('name', 'desc')
-                  }"
-					ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">
-				Name
+                  }" ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">Name
+			<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
 			</th>
-
 			<th ng-repeat="f in q.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
                   }"
 				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
-				{{f.name}}
+				<span ng-bind="f.name"></span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy(f.key, 'asc'),'fa-sort-desc':tableParams.isSortBy(f.key, 'desc')}" class="fa"></span>
 			</th>
-
 			<th class="text-right">Aktionen</th>
 		</tr>
 		</thead>
@@ -260,7 +268,10 @@
 		<tbody>
 		<tr ng-repeat="p in $data">
 			<td ng-bind="p.name"></td>
-			<td ng-repeat="f in q.fields" ng-bind="getDispayValues(f,p)"></td>
+			<td ng-repeat="f in q.fields">
+				<span ng-bind="getDispayValues(f,p)"></span>
+				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
+			</td>
 			<td class="col-action">
 				<span class="btn-right" ng-click="remove(p)" title="Organisation löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ng-click="relationsDialog(p)" title="Verbindungen bearbeiten"><i class="fa fa-link"></i></span>
@@ -269,7 +280,6 @@
 		</tr>
 		</tbody>
 	</table>
-	<!--</div>-->
 
 </script>
 
@@ -317,6 +327,8 @@
 	<hr/>
 
 	<div ngdatafields data-fields="item.data"></div>
+
+	<hr/>
 
 	<div class="btn-group">
 		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -415,10 +427,22 @@
 		</div>
 	</div>
 
-	<table ng-table="tableParams" class="table table-striped">
+	<table ng-table="tableParams" template-pagination="partials/pager-blank.html" class="table table-striped">
+		<thead>
+		<tr>
+			<th class="sortable" ng-class="{
+                    'sort-asc': tableParams.isSortBy('name', 'asc'),
+                    'sort-desc': tableParams.isSortBy('name', 'desc')
+                  }" ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">Name
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
+			</th>
+			<th class="text-right">Aktionen</th>
+		</tr>
+		</thead>
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
+			<td ng-bind="p.name">
+			</td>
 			<td>
 				<span class="btn-right" ng-click="remove(p)" title="Benutzerin löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ui-sref='user({id: p._id})' title="Benutzerin bearbeiten"><i class="fa fa-edit"></i></span>
@@ -508,12 +532,35 @@
 	</div>
 
 
-	<table ng-table="tableParams" class="table table-striped">
+	<table ng-table="tableParams" template-pagination="partials/pager-blank.html" class="table table-striped">
+		<thead>
+		<tr>
+		   <th class="sortable" ng-class="{
+                    'sort-asc': tableParams.isSortBy('name', 'asc'),
+                    'sort-desc': tableParams.isSortBy('name', 'desc')
+                  }" ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">Name
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
+			</th>
+			<th class="sortable" ng-class="{
+                    'sort-asc': tableParams.isSortBy('key', 'asc'),
+                    'sort-desc': tableParams.isSortBy('key', 'desc')
+                  }" ng-click="tableParams.sorting('key', tableParams.isSortBy('key', 'asc') ? 'desc' : 'asc')">Schlüssel
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('key', 'asc'),'fa-sort-desc':tableParams.isSortBy('key', 'desc')}" class="fa"></span>
+			</th>
+			<th class="sortable" ng-class="{
+                    'sort-asc': tableParams.isSortBy('format', 'asc'),
+                    'sort-desc': tableParams.isSortBy('format', 'desc')
+                  }" ng-click="tableParams.sorting('format', tableParams.isSortBy('format', 'asc') ? 'desc' : 'asc')">Format
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('format', 'asc'),'fa-sort-desc':tableParams.isSortBy('format', 'desc')}" class="fa"></span>
+			</th>
+			<th class="text-right">Aktionen</th>
+		</tr>
+		</thead>
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
-			<td data-title="'Schlüssel'" filter="{ 'key': 'text' }" sortable="'key'" ng-bind="p.key"></td>
-			<td data-title="'Format'" filter="{ 'format': 'text' }" sortable="'format'" ng-bind="p.format"></td>
+			<td ng-bind="p.name"></td>
+			<td ng-bind="p.key"></td>
+			<td ng-bind="globals.fieldtypes[p.format]"></td>
 			<td>
 				<span class="btn-right" ng-click="remove(p)" title="Datenfeld löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ui-sref='field({id: p._id})' title="Datenfeld bearbeiten"><i class="fa fa-edit"></i></span>
@@ -542,18 +589,14 @@
 				<div class="form-group">
 					<label>Typ</label>
 					<select class="form-control" ng-model="field.format">
-						<option value="string">Text</option>
-						<option value="number">Zahl</option>
-						<option value="link">Link</option>
-						<option value="bool">Ja/Nein-Wert</option>
-						<option value="address">Adresse</option>
+						<option ng-repeat="fieldtype in fieldtypes" value="{{fieldtype.id}}" ng-bind="fieldtype.name"></option>
 					</select>
 				</div>
 			</form>
 			<div class="pull-right">
 				<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
 				<button ng-if="isNew" class="btn btn-primary" ng-click="createnew()">Anlegen</button>
-				<button class="btn btn-default" ui-sref="users">Abbruch</button>
+				<button class="btn btn-default" ui-sref="fields">Abbruch</button>
 			</div>
 		</div>
 	</div>
@@ -601,19 +644,24 @@
 		<h1><i class="fa fa-spin fa-spinner"></i> Verbindungen-Liste wird geladen</h1>
 	</div>
 
-	<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
+	<table ng-table="tableParams" template-pagination="partials/pager.html" show-filter="false" class="table table-striped">
 
 		<thead>
 		<tr>
 			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('name', 'asc'), 'sort-desc': tableParams.isSortBy('name', 'desc')}"
-				ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">Name
+				ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">
+				<span>Name</span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
 			</th>
 			<th ng-repeat="f in q.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
                   }"
-				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')" ng-bind="f.name"></th>
+				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
+				<span ng-bind="f.name"></span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy(f.key, 'asc'),'fa-sort-desc':tableParams.isSortBy(f.key, 'desc')}" class="fa"></span>
+			</th>
 			<th class="text-right">Aktionen</th>
 		</tr>
 		</thead>
@@ -632,9 +680,27 @@
 
 </script>
 
+<script type="text/ng-template" id="partials/fieldsedit-modal.html">
+
+	<div class="modal-header">
+		<button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
+		<h4 class="modal-title">Feld bearbeiten</h4>
+	</div>
+	<div class="modal-body" ng-init="fields=data.fields;removeData=data.removeData">
+		<div ng-include="'partials/datafields.html'"></div>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-default" ng-show="!data.fields[0].fixed" ng-click="data.newField(fields)">Feld anlegen</button>
+		<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
+		<button class="btn btn-warning" ng-click="cancel()" translate>Abbruch</button>
+	</div>
+
+</script>
+
 <script type="text/ng-template" id="partials/datafields.html">
+
 	<div ng-repeat="d in fields" ng-switch="d.format">
-		<p class="field-headline"><span ng-bind="d.desc"></span><i class="glyphicon glyphicon-remove btn-right" title="{{d.desc}} entfernen" ng-click="removeData(d)"></i></p>
+		<p class="field-headline"><span ng-bind="d.desc"></span><i ng-show="!d.fixed" class="glyphicon glyphicon-remove btn-right" title="{{d.desc}} entfernen" ng-click="removeData(d,fields)"></i></p>
 
 		<div ng-switch-when="link" class="row">
 			<form class="form">
@@ -715,6 +781,32 @@
 			</form>
 		</div>
 
+		<div ng-switch-when="strings" class="row">
+			<form class="form">
+				<div class="form-group col-md-12">
+					<input type="text" class="form-control" placeholder="Text" ng-model="d.value">
+				</div>
+			</form>
+		</div>
+
+		<div ng-switch-when="tags" class="row">
+			<form class="form">
+				<div class="form-group col-md-12" ng-controller="TagEdit">
+					<div class="has-feedback">
+						<input type="text" class="form-control" placeholder="{{d.desc}}" ng-model="edit[d.key]" ng-enter="addTagEntry(d, edit[d.key])"
+							   options="d.typeaheadOptions" datasets="d.dataset" ngtypeahead
+								>
+						<span ng-show="canAddTagEntry(d, edit[d.key])" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addTagEntry(d, edit[d.key])"></span>
+					</div>
+					<div class="label-list">
+						<div ng-repeat="o in d.value" class="label label-default">
+							<span ng-bind="o"></span><i class="glyphicon glyphicon-remove btn-label-right" title="Entfernen" ng-click="removeTagEntry(d, o)"></i>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+
 		<div ng-switch-when="bool" class="row">
 			<form class="form">
 				<div class="form-group col-md-12">
@@ -727,7 +819,7 @@
 			</form>
 		</div>
 
-		<hr/>
+		<hr ng-if="$index==fields.length"/>
 
 	</div>
 
@@ -774,8 +866,8 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<label>Typ</label>
-			<input type="text" class="form-control" placeholder="Typ" ng-model="relation.type">
+			<label>Art</label>
+			<input type="text" class="form-control" placeholder="Art" ng-model="relation.type">
 		</div>
 		<div class="form-group">
 			<label>Schlagworte</label>
