--- a/station/index.html
+++ b/station/index.html
@@ -67,6 +67,7 @@
 </div>
 
 <script type="text/ng-template" id="partials/pager-blank.html"></script>
+
 <script type="text/ng-template" id="partials/pager.html">
 	<div class="row" ng-controller="PagerCtrl">
 		<div class="col-md-3">
@@ -258,6 +259,75 @@
 				<span class="btn-right" ng-click="remove(p)" title="Organisation löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ng-click="relationsDialog(p)" title="Verbindungen bearbeiten"><i class="fa fa-link"></i></span>
 				<span class="btn-right" ui-sref='organisation({id: p._id})' title="Organisation bearbeiten"><i class="fa fa-edit"></i></span>
+			</td>
+		</tr>
+		</tbody>
+	</table>
+
+</script>
+
+<script type="text/ng-template" id="partials/relations.html">
+
+	<div class="row">
+		<div class="col-md-4 headline">
+			<h1>Verbindungen</h1>
+
+			<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
+		</div>
+
+		<div class="col-md-2">
+			<button class="btn btn-default" ui-sref="relation({id: 'new'})">Verbindung anlegen</button>
+		</div>
+
+		<div class="col-md-3">
+			<div class="btn-group hidden">
+				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+					Daten anzeigen <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu">
+					<li ng-repeat="o in fields" ng-class="{active:o.visible}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="col-md-3">
+			<div class="pull-right has-feedback">
+				<label>Suche</label>
+				<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
+				<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
+			</div>
+		</div>
+	</div>
+	<div ng-if="loading" class="loading">
+		<h1><i class="fa fa-spin fa-spinner"></i> Verbindungen-Liste wird geladen</h1>
+	</div>
+
+	<table ng-table="tableParams" template-pagination="partials/pager.html" show-filter="false" class="table table-striped">
+
+		<thead>
+		<tr>
+			<th ng-repeat="f in q.fields"
+				class="sortable" ng-class="{
+                    'sort-asc': tableParams.isSortBy(f.key, 'asc'),
+                    'sort-desc': tableParams.isSortBy(f.key, 'desc')
+                  }"
+				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
+				<span ng-bind="f.name"></span>
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy(f.key, 'asc'),'fa-sort-desc':tableParams.isSortBy(f.key, 'desc')}" class="fa"></span>
+			</th>
+			<th class="text-right">Aktionen</th>
+		</tr>
+		</thead>
+
+		<tbody>
+		<tr ng-repeat="p in $data">
+			<td ng-repeat="f in q.fields">
+				<span ng-bind="getDispayValues(f,p)"></span>
+				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
+			</td>
+			<td class="col-action">
+				<span class="btn-right" ng-click="remove(p)" title="Verbindung löschen"><i class="fa fa-trash"></i></span>
+				<span class="btn-right" ui-sref='relation({id: p._id})' title="Verbindung bearbeiten"><i class="fa fa-edit"></i></span>
 			</td>
 		</tr>
 		</tbody>
@@ -598,67 +668,6 @@
 		<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
 		<button class="btn btn-warning" ng-click="cancel()" translate>Abbruch</button>
 	</div>
-
-</script>
-
-<script type="text/ng-template" id="partials/relations.html">
-
-	<div class="row">
-		<div class="col-md-6 headline">
-			<h1>Verbindungen</h1>
-
-			<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
-		</div>
-
-		<div class="col-md-3">
-			<button class="btn btn-default" ui-sref="relation({id: 'new'})">Verbindung anlegen</button>
-		</div>
-
-		<div class="col-md-3">
-			<div class="pull-right has-feedback">
-				<label>Suche</label>
-				<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
-				<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
-			</div>
-		</div>
-	</div>
-	<div ng-if="loading" class="loading">
-		<h1><i class="fa fa-spin fa-spinner"></i> Verbindungen-Liste wird geladen</h1>
-	</div>
-
-	<table ng-table="tableParams" template-pagination="partials/pager.html" show-filter="false" class="table table-striped">
-
-		<thead>
-		<tr>
-			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('name', 'asc'), 'sort-desc': tableParams.isSortBy('name', 'desc')}"
-				ng-click="tableParams.sorting('name', tableParams.isSortBy('name', 'asc') ? 'desc' : 'asc')">
-				<span>Name</span>
-				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('name', 'asc'),'fa-sort-desc':tableParams.isSortBy('name', 'desc')}" class="fa"></span>
-			</th>
-			<th ng-repeat="f in q.fields"
-				class="sortable" ng-class="{
-                    'sort-asc': tableParams.isSortBy(f.key, 'asc'),
-                    'sort-desc': tableParams.isSortBy(f.key, 'desc')
-                  }"
-				ng-click="tableParams.sorting(f.key, tableParams.isSortBy(f.key, 'asc') ? 'desc' : 'asc')">
-				<span ng-bind="f.name"></span>
-				<span ng-class="{'fa-sort-asc':tableParams.isSortBy(f.key, 'asc'),'fa-sort-desc':tableParams.isSortBy(f.key, 'desc')}" class="fa"></span>
-			</th>
-			<th class="text-right">Aktionen</th>
-		</tr>
-		</thead>
-
-		<tbody>
-		<tr ng-repeat="p in $data">
-			<td ng-bind="p.name"></td>
-			<td ng-repeat="f in q.fields" ng-bind="getDispayValues(f,p)"></td>
-			<td class="col-action">
-				<span class="btn-right" ng-click="remove(p)" title="Verbindung löschen"><i class="fa fa-trash"></i></span>
-				<span class="btn-right" ui-sref='relation({id: p._id})' title="Verbindung bearbeiten"><i class="fa fa-edit"></i></span>
-			</td>
-		</tr>
-		</tbody>
-	</table>
 
 </script>
 
