--- a/lobbynetwork/test/index.html
+++ b/lobbynetwork/test/index.html
@@ -36,7 +36,7 @@
 					crs: crs
 				});
 
-				var layer = L.tileLayer('../tiles/{z}/{y}/{x}.png', {
+				var layer = L.tileLayer('../tiles/{z}/{y}/{x}.gif', {
 					minZoom: 0,
 					maxZoom: 8,
 					maxNativeZoom: 6,
