--- a/lobbynetwork/test/index.html
+++ b/lobbynetwork/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>31C3 map</title>
+		<title>Lobbyradar Visualization Test</title>
 		<link rel="stylesheet" type="text/css" href="leaflet/leaflet.css">
 		<script type="text/javascript" src="leaflet/leaflet.js"></script>
 		<script type="text/javascript">
