--- a/station/index.html
+++ b/station/index.html
@@ -62,7 +62,6 @@
 
 <div class="container">
 	<div ui-view></div>
-
 	<br/>
 </div>
 
@@ -129,7 +128,7 @@
 
 			<div class="checkbox">
 				<label>
-					<input type="checkbox" ng-checked="specialnonstandardfilter" ng-click="toggleSpecialFilter()"> Nicht-Standard-Namen filtern
+					<input type="checkbox" ng-checked="filter.special" ng-click="toggleSpecialFilter()"> Nicht-Standard-Namen filtern
 				</label>
 			</div>
 
@@ -145,7 +144,7 @@
 					Daten anzeigen <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" role="menu">
-					<li ng-repeat="o in fields" ng-class="{active:o.visible}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
+					<li ng-repeat="o in fields" ng-class="{active:isFieldActive(o)}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -167,7 +166,7 @@
 
 		<thead>
 		<tr>
-			<th ng-repeat="f in q.fields"
+			<th ng-repeat="f in state.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
@@ -183,7 +182,7 @@
 
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td ng-repeat="f in q.fields">
+			<td ng-repeat="f in state.fields">
 				<span ng-bind="getDispayValues(f,p)"></span>
 				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
 			</td>
@@ -218,7 +217,7 @@
 					Daten anzeigen <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" role="menu">
-					<li ng-repeat="o in fields" ng-class="{active:o.visible}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
+					<li ng-repeat="o in fields" ng-class="{active:isFieldActive(o)}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -239,7 +238,7 @@
 
 		<thead>
 		<tr>
-			<th ng-repeat="f in q.fields"
+			<th ng-repeat="f in state.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
@@ -254,13 +253,14 @@
 
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td ng-repeat="f in q.fields">
+			<td ng-repeat="f in state.fields">
 				<span ng-bind="getDispayValues(f,p)"></span>
 				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
 			</td>
-			<td class="col-action">
+			<td class="col-action-large">
 				<span class="btn-right" ng-click="remove(p)" title="Organisation löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ng-click="relationsDialog(p)" title="Verbindungen bearbeiten"><i class="fa fa-link"></i></span>
+				<span class="btn-right" ng-click='mergeDialog(p)' title="Organisationen zusammenführen"><i class="fa fa-code-fork fa-rotate-270"></i></span>
 				<span class="btn-right" ui-sref='organisation({id: p._id})' title="Organisation bearbeiten"><i class="fa fa-edit"></i></span>
 			</td>
 		</tr>
@@ -288,7 +288,7 @@
 					Daten anzeigen <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" role="menu">
-					<li ng-repeat="o in fields" ng-class="{active:o.visible}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
+					<li ng-repeat="o in fields" ng-class="{active:isFieldActive(o)}"><a href ng-click="toggleField(o)" ng-bind="o.name"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -309,7 +309,7 @@
 
 		<thead>
 		<tr>
-			<th ng-repeat="f in q.fields"
+			<th ng-repeat="f in state.fields"
 				class="sortable" ng-class="{
                     'sort-asc': tableParams.isSortBy(f.key, 'asc'),
                     'sort-desc': tableParams.isSortBy(f.key, 'desc')
@@ -324,7 +324,7 @@
 
 		<tbody>
 		<tr ng-repeat="p in $data">
-			<td ng-repeat="f in q.fields">
+			<td ng-repeat="f in state.fields">
 				<span ng-bind="getDispayValues(f,p)"></span>
 				<span ng-show="f._type!=='extras'" class="btn-left" title="{{f.name}} bearbeiten" ng-click="editData(f,p)"><i class="fa fa-pencil"></i></span>
 			</td>
@@ -714,6 +714,7 @@
 		<form class="form">
 			<div class="form-group">
 				<label>{{data.entity.name}} zusammenführen mit</label>
+
 				<div class="has-feedback">
 					<input type="text" class="form-control" placeholder="{{data.modename}}" ng-model="data.edit.name" datasets="typeaheadDatasetEntities" ngtypeahead>
 					<span ng-show="data.edit._id" class="glyphicon glyphicon-ok form-control-feedback"></span>
